The Official Release?
- Replaces the names of all the plugins to make them more specific
- Renamed Prober to ProbeGen, since this more accurately describes what it does.
- Changed the README to have more going on.

--- a/addons/deadlylampshade.probegen/plugin.cfg
+++ b/addons/deadlylampshade.probegen/plugin.cfg
@@ -1,6 +1,6 @@
 [plugin]
 
-name="Prober"
+name="DeadlyLampshade's ProbeGen"
 description="Creates a GIProbe that perfectly fits all selected meshes."
 author="DeadlyLampshade"
 version=""
