--- a/addons/deadlylampshade.tageditor/plugin.cfg
+++ b/addons/deadlylampshade.tageditor/plugin.cfg
@@ -1,6 +1,6 @@
 [plugin]
 
-name="Tag Editor"
+name="DeadlyLampshade's Tag Editor"
 description="Replaces string arrays with hint 23 with a Tag System."
 author="Deadly Lampshade"
 version="1.0"
